erDiagram
    DashboardConfiguration {
        BIGINT configId "PK"
        BIGINT schoolId "FK"
        DECIMAL(5,2) kpiType
        VARCHAR(50) kpiCode
        VARCHAR(200) kpiNameAr
        VARCHAR(200) kpiNameEn
        TEXT kpiDescription
        VARCHAR(200) sourceModule
        VARCHAR(200) sourceTable
        VARCHAR(200) sourceField
        INT aggregationMethod
        VARCHAR(50) chartType
        VARCHAR(200) refreshInterval
        VARCHAR(200) targetValue
        VARCHAR(200) thresholdGreen
        VARCHAR(200) thresholdYellow
        VARCHAR(200) thresholdRed
        BOOLEAN alertEnabled
        VARCHAR(200) alertRecipients
        BOOLEAN isActive
        VARCHAR(200) displayOrder
        BIGINT dashboardId "FK"
        BIGINT createdByUserId "FK"
        BIGINT updatedByUserId "FK"
        DATE createdAt
        DATE updatedAt
        BOOLEAN isDeleted
    }
    KPI_Metrics {
        BIGINT metricId "PK"
        BIGINT configId "FK"
        BIGINT schoolId "FK"
        BIGINT academicYearId "FK"
        VARCHAR(50) periodType
        VARCHAR(200) periodValue
        DATE periodStartDate
        DATE periodEndDate
        VARCHAR(200) actualValue
        VARCHAR(200) targetValue
        DECIMAL(5,2) previousValue
        DECIMAL(5,2) changePercentage
        VARCHAR(50) statusColor
        VARCHAR(200) calculationMethod
        DATE calculationDate
        BIGINT calculatedByUserId "FK"
        VARCHAR(200) dataSource
        TEXT notes
        BOOLEAN isVerified
        BIGINT verifiedByUserId "FK"
        VARCHAR(200) verifiedAt
        BIGINT createdByUserId "FK"
        BIGINT updatedByUserId "FK"
        DATE createdAt
        DATE updatedAt
        BOOLEAN isDeleted
    }
    TrendAnalysisResult {
        BIGINT analysisId "PK"
        BIGINT schoolId "FK"
        VARCHAR(200) studyPeriod
        VARCHAR(200) startYear
        VARCHAR(200) endYear
        DECIMAL(5,2) kpiType
        VARCHAR(50) kpiCode "FK"
        DATE historicalValues
        VARCHAR(200) trendDirection
        VARCHAR(200) slope
        VARCHAR(200) intercept
        VARCHAR(200) correlationCoefficient
        VARCHAR(200) forecastedValue
        VARCHAR(200) forecastedValueNext
        DECIMAL(5,2) confidenceLevel
        DECIMAL(5,2) lowerBound
        DECIMAL(5,2) upperBound
        VARCHAR(200) forecastingMethod
        DATE analysisDate
        BIGINT analyzedByUserId "FK"
        TEXT notes
        VARCHAR(50) status
        BIGINT approvedByUserId "FK"
        DATE approvalDate
        BIGINT createdByUserId "FK"
        BIGINT updatedByUserId "FK"
        DATE createdAt
        DATE updatedAt
        BOOLEAN isDeleted
    }
    SchoolStatisticsDraft {
        BIGINT draftId "PK"
        BIGINT schoolId "FK"
        BIGINT academicYearId "FK"
        BIGINT semesterId "FK"
        VARCHAR(50) periodType
        VARCHAR(200) periodValue
        DATE periodStartDate
        DATE periodEndDate
        INT draftNumber
        INT draftVersion
        VARCHAR(200) studentDataJson
        VARCHAR(200) staffDataJson
        VARCHAR(200) financialSummaryJson
        VARCHAR(200) assetSummaryJson
        DECIMAL(5,2) completenessPercentage
        VARCHAR(50) draftStatus
        BOOLEAN isLocked
        DATE lockedAt
        BIGINT lockedByUserId "FK"
        DATE lastSavedAt
        BIGINT savedByUserId "FK"
        TEXT notes
        BIGINT createdByUserId "FK"
        BIGINT updatedByUserId "FK"
        DATE createdAt
        DATE updatedAt
        BOOLEAN isDeleted
    }
    SubmittedStatistics {
        BIGINT submissionId "PK"
        BIGINT draftId "FK"
        BIGINT schoolId "FK"
        BIGINT academicYearId "FK"
        INT submissionNumber
        DATETIME submissionTimestamp
        VARCHAR(100) submissionMethod
        BIGINT submittedByUserId "FK"
        VARCHAR(200) directorSignature
        DATE directorSignatureDate
        VARCHAR(200) studentDataSnapshot
        VARCHAR(200) staffDataSnapshot
        VARCHAR(200) financialSummarySnapshot
        VARCHAR(200) assetSummarySnapshot
        VARCHAR(50) approvalStatus
        TEXT reviewerNotes
        DATE reviewDate
        BIGINT reviewedByUserId "FK"
        VARCHAR(200) rejectionReason
        DATE approvalDate
        INT approvalCertificateNumber
        VARCHAR(200) approvalCertificatePath
        BOOLEAN isFinal
        BOOLEAN isArchived
        DATE archivedAt
        TEXT notes
        BIGINT createdByUserId "FK"
        BIGINT updatedByUserId "FK"
        DATE createdAt
        DATE updatedAt
        BOOLEAN isDeleted
    }
    StatisticsUpdateHistory {
        BIGINT historyId "PK"
        BIGINT draftId "FK"
        BIGINT submissionId "FK"
        BIGINT schoolId "FK"
        INT changeType
        VARCHAR(50) changeCategory
        VARCHAR(200) oldValue
        VARCHAR(200) newValue
        DATE changeDate
        DATE updateReason
        VARCHAR(200) supportingDocument
        BIGINT changedByUserId "FK"
        BOOLEAN isApproved
        BIGINT approvedByUserId "FK"
        DATE approvalDate
        TEXT notes
        BIGINT createdByUserId "FK"
        BIGINT updatedByUserId "FK"
        DATE createdAt
        DATE updatedAt
        BOOLEAN isDeleted
    }
    StatisticsArchive {
        BIGINT archiveId "PK"
        BIGINT submissionId "FK"
        BIGINT schoolId "FK"
        VARCHAR(200) archivedYear
        VARCHAR(50) periodType
        VARCHAR(200) periodValue
        DATE archivedAt
        BIGINT archivedByUserId "FK"
        VARCHAR(200) finalDataSnapshot
        VARCHAR(200) studentSnapshot
        VARCHAR(200) staffSnapshot
        VARCHAR(200) financialSnapshot
        VARCHAR(200) assetSnapshot
        VARCHAR(200) retentionPeriod
        DATE retentionEndDate
        BOOLEAN isReadOnly
        TEXT notes
        BIGINT createdByUserId "FK"
        BIGINT updatedByUserId "FK"
        DATE createdAt
        DATE updatedAt
        BOOLEAN isDeleted
    }
    SystemReports {
        BIGINT reportId "PK"
        BIGINT schoolId "FK"
        VARCHAR(50) reportType
        VARCHAR(50) reportSubType
        VARCHAR(200) reportTitle
        VARCHAR(200) reportFrequency
        VARCHAR(200) periodStart
        VARCHAR(200) periodEnd
        DATETIME generationDate
        DECIMAL(5,2) generatedBy
        BIGINT generatedByUserId "FK"
        VARCHAR(200) fileFormat
        VARCHAR(200) filePath
        VARCHAR(200) fileSize
        VARCHAR(50) status
        BOOLEAN isPublished
        DATE publishedAt
        BIGINT publishedByUserId "FK"
        INT viewCount
        DATE lastViewedAt
        TEXT notes
        BIGINT createdByUserId "FK"
        BIGINT updatedByUserId "FK"
        DATE createdAt
        DATE updatedAt
        BOOLEAN isDeleted
    }
    ReportApprovals {
        BIGINT approvalId "PK"
        BIGINT reportId "FK"
        BIGINT schoolId "FK"
        DATE submissionDate
        BIGINT submittedByUserId "FK"
        VARCHAR(50) approvalStatus
        BIGINT reviewerId "FK"
        DATE reviewDate
        TEXT comments
        VARCHAR(200) rejectionReason
        DATE approvalDate
        BIGINT approvedByUserId "FK"
        VARCHAR(50) digitalSignature
        INT certificateNumber
        VARCHAR(200) certificatePath
        BOOLEAN isFinal
        VARCHAR(200) validUntil
        TEXT notes
        BIGINT createdByUserId "FK"
        BIGINT updatedByUserId "FK"
        DATE createdAt
        DATE updatedAt
        BOOLEAN isDeleted
    }
    ComparativeReport {
        BIGINT comparativeId "PK"
        BIGINT schoolId "FK"
        INT reportNumber
        VARCHAR(200) comparisonTitle
        VARCHAR(200) firstPeriodLabel
        VARCHAR(200) firstPeriodStart
        VARCHAR(200) firstPeriodEnd
        VARCHAR(200) secondPeriodLabel
        VARCHAR(200) secondPeriodStart
        VARCHAR(200) secondPeriodEnd
        VARCHAR(50) comparisonType
        VARCHAR(200) kpiCompared
        VARCHAR(200) comparisonData
        VARCHAR(200) autoInsights
        VARCHAR(200) summary
        DATE generationDate
        BIGINT generatedByUserId "FK"
        VARCHAR(200) fileFormat
        VARCHAR(200) filePath
        VARCHAR(200) fileSize
        INT viewCount
        DATE lastViewedAt
        VARCHAR(50) status
        TEXT notes
        BIGINT createdByUserId "FK"
        BIGINT updatedByUserId "FK"
        DATE createdAt
        DATE updatedAt
        BOOLEAN isDeleted
    }
    FinancialSummaryReports {
        BIGINT summaryId "PK"
        BIGINT schoolId "FK"
        VARCHAR(200) fiscalYear
        DATE reportDate
        VARCHAR(50) reportType
        VARCHAR(200) totalBookValue
        VARCHAR(200) totalDepreciation
        INT totalAssetsCount
        DATE totalAcquisitionCost
        VARCHAR(200) totalRevaluationGains
        VARCHAR(200) totalImpairmentLosses
        VARCHAR(200) totalRevenue
        VARCHAR(200) totalExpenses
        VARCHAR(200) netIncome
        VARCHAR(50) auditStatus
        VARCHAR(200) auditFirmName
        VARCHAR(200) auditorName
        DATE auditDate
        VARCHAR(200) auditorSignature
        VARCHAR(50) approvalStatus
        BIGINT approvedByUserId "FK"
        DATE approvalDate
        VARCHAR(200) filePath
        TEXT notes
        BIGINT createdByUserId "FK"
        BIGINT updatedByUserId "FK"
        DATE createdAt
        DATE updatedAt
        BOOLEAN isDeleted
    }
    ExternalComplianceReports {
        BIGINT reportId "PK"
        BIGINT schoolId "FK"
        INT reportNumber
        VARCHAR(200) targetEntity
        VARCHAR(50) entityType
        VARCHAR(50) standardType
        VARCHAR(200) standardVersion
        VARCHAR(50) reportType
        VARCHAR(200) periodStart
        VARCHAR(200) periodEnd
        DATE generationDate
        BIGINT generatedByUserId "FK"
        VARCHAR(200) filePath
        VARCHAR(200) fileSize
        DATETIME submissionDate
        VARCHAR(100) submissionMethod
        VARCHAR(500) apiEndpoint
        BIGINT apiRequestId "FK"
        VARCHAR(50) receiptReference
        DATE receiptDate
        VARCHAR(200) receiptAttachment
        VARCHAR(50) submissionStatus
        VARCHAR(200) rejectionReason
        DATE resubmissionDate
        BOOLEAN isFinal
        DATE finalApprovalDate
        INT finalApprovalNumber
        TEXT notes
        BIGINT createdByUserId "FK"
        BIGINT updatedByUserId "FK"
        DATE createdAt
        DATE updatedAt
        BOOLEAN isDeleted
    }
    GapAnalysisReports {
        BIGINT analysisId "PK"
        BIGINT schoolId "FK"
        INT analysisNumber
        VARCHAR(50) analysisType
        BIGINT assetCategoryId "FK"
        BIGINT gradeLevelId "FK"
        BIGINT departmentId "FK"
        INT requiredQty
        INT availableQty
        VARCHAR(200) gapValue
        DECIMAL(5,2) gapPercentage
        VARCHAR(50) gapType
        VARCHAR(200) recommendation
        VARCHAR(200) priority
        DECIMAL(15,2) estimatedCost
        DATE analysisDate
        BIGINT analyzedByUserId "FK"
        VARCHAR(200) filePath
        VARCHAR(50) status
        BIGINT approvedByUserId "FK"
        DATE approvalDate
        TEXT notes
        BIGINT createdByUserId "FK"
        BIGINT updatedByUserId "FK"
        DATE createdAt
        DATE updatedAt
        BOOLEAN isDeleted
    }
    ReportsArchive {
        BIGINT archiveId "PK"
        VARCHAR(50) sourceReportType
        BIGINT sourceReportId "FK"
        BIGINT schoolId "FK"
        DATE archivedAt
        BIGINT archivedByUserId "FK"
        VARCHAR(200) retentionPeriod
        DATE retentionEndDate
        VARCHAR(200) storageLocation
        VARCHAR(200) filePath
        VARCHAR(200) fileSize
        BOOLEAN isReadOnly
        DATE disposalDate
        VARCHAR(50) disposalStatus
        VARCHAR(200) disposalMethod
        TEXT notes
        BIGINT createdByUserId "FK"
        BIGINT updatedByUserId "FK"
        DATE createdAt
        DATE updatedAt
        BOOLEAN isDeleted
    }
    ExceptionalStatistics {
        BIGINT statisticsId "PK"
        BIGINT schoolId "FK"
        BIGINT academicYearId "FK"
        INT reportNumber
        VARCHAR(200) totalIncidents
        VARCHAR(200) totalClosureDays
        DECIMAL(15,2) totalDamageCost
        INT totalAwardsCount
        INT totalParticipationsCount
        INT totalDeficitCount
        INT totalSurplusCount
        VARCHAR(200) emergencySummary
        VARCHAR(200) closureSummary
        VARCHAR(200) awardSummary
        DATE generationDate
        BIGINT generatedByUserId "FK"
        VARCHAR(200) filePath
        VARCHAR(50) status
        BIGINT approvedByUserId "FK"
        DATE approvalDate
        TEXT notes
        BIGINT createdByUserId "FK"
        BIGINT updatedByUserId "FK"
        DATE createdAt
        DATE updatedAt
        BOOLEAN isDeleted
    }
    DashboardConfiguration ||--o{ KPI_Metrics : "configId"
    DashboardConfiguration ||--o{ TrendAnalysisResult : "kpiCode"
    SchoolStatisticsDraft ||--o{ SubmittedStatistics : "draftId"
    SchoolStatisticsDraft ||--o{ StatisticsUpdateHistory : "draftId"
    SubmittedStatistics ||--o{ StatisticsUpdateHistory : "submissionId"
    SubmittedStatistics ||--o{ StatisticsArchive : "submissionId"
    SystemReports ||--o{ ReportApprovals : "reportId"